// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrandLogo renders dark custom branding logo 1`] = `
<img
  alt="Logo"
  className=""
  src="l"
/>
`;

exports[`BrandLogo renders dark custom branding symbol 1`] = `
<img
  alt="Logo"
  className="brandLogoSpin"
  src="s"
/>
`;

exports[`BrandLogo renders dark sourcegraph logo 1`] = `
<img
  alt="Sourcegraph logo"
  className=""
  src="/assets/img/sourcegraph-logo-dark.svg"
/>
`;

exports[`BrandLogo renders dark sourcegraph symbol 1`] = `
<img
  alt="Sourcegraph logo"
  className="brandLogoSpin"
  src="/assets/img/sourcegraph-mark.svg?v2"
/>
`;

exports[`BrandLogo renders light custom branding logo 1`] = `
<img
  alt="Logo"
  className=""
  src="l"
/>
`;

exports[`BrandLogo renders light custom branding symbol 1`] = `
<img
  alt="Logo"
  className="brandLogoSpin"
  src="s"
/>
`;

exports[`BrandLogo renders light sourcegraph logo 1`] = `
<img
  alt="Sourcegraph logo"
  className=""
  src="/assets/img/sourcegraph-logo-light.svg"
/>
`;

exports[`BrandLogo renders light sourcegraph symbol 1`] = `
<img
  alt="Sourcegraph logo"
  className="brandLogoSpin"
  src="/assets/img/sourcegraph-mark.svg?v2"
/>
`;
